# gusto2

./: .gitignore  LICENSE  README.md  justfile
.github/: copilot-instructions.md
gusto2-app/: README.md  TASKS.md  docker-compose.prod.yml  docker-compose.yml
gusto2-app/backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
gusto2-app/backend/gusto2/: __init__.py  database.py  main.py  settings.py
gusto2-app/backend/gusto2/rules/: __init__.py  rule_engine.py
gusto2-app/frontend/: .eslintrc.js  Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  vue.config.js
gusto2-app/frontend/public/: index.html
gusto2-app/frontend/src/: App.vue  router.js
gusto2-app/frontend/src/components/: CalendarPicker.vue  MealPlanRules.vue  RecipeAutocomplete.vue  RecipeList.vue  TagInput.vue
gusto2-app/frontend/src/pages/: MealPlanPage.vue  OrderPage.vue  RecipesPage.vue
gusto2-app/src/services/rules/: rule_engine.py
