[project]
name = "gusto2"
version = "0.1.0"
description = "Backend for Gusto2 application"
authors = [
    {name = "Gusto2 Team"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.115.9",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "starlette==0.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["gusto2"]