[project]
name = "gusto2"
version = "0.1.0"
description = "Backend for Gusto2 application"
authors = [
    {name = "Gusto2 Team"}
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "fastapi==0.115.9",
    "uvicorn==0.34.0",
    "pydantic==2.10.6",
    "starlette==0.45.0",
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "sqlalchemy",  # Adding SQLAlchemy for database ORM
    "openai>=1.0.0",  # For recipe suggestions
    "supermarktconnector==0.8.1",  # For Albert Heijn product search
    "ruff==0.11.5",  # For linting and formatting Python code
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gusto2"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "C90"]

[tool.ruff.lint.isort]
known-first-party = ["gusto2"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
